restructure directory and add simulation training identical to prediction

--- a/Notebooks/exp-1-motion-prediction/s3-train-agent_motion_prediction.ipynb
+++ b/Notebooks/exp-1-motion-prediction/s3-train-agent_motion_prediction.ipynb
@@ -14,6 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Setup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -30,7 +39,7 @@
    "outputs": [],
    "source": [
     "#NOTE: DONT USE RELATIVE PATHS FOR THE MODELS PROVIDED BY L5\n",
-    "experiments_directory = Path(Path(os.path.abspath('')).parent.parent.parent, \"Experiments\")\n",
+    "experiments_directory = Path(Path(os.path.abspath('')).parent.parent, \"Experiments\")\n",
     "experiments_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "data_directory = Path(experiments_directory, \"data\")\n",
@@ -89,33 +98,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 71
-    },
-    "executionInfo": {
-     "elapsed": 5572,
-     "status": "ok",
-     "timestamp": 1660707075761,
-     "user": {
-      "displayName": "Anish Shah",
-      "userId": "05913492621931233323"
-     },
-     "user_tz": 240
-    },
-    "id": "Hbg_JE1s0q6u",
-    "outputId": "48fec4f3-85e5-413a-911c-e4db3ad1aaa4"
-   },
-   "outputs": [],
-   "source": [
-    "import wandb\n",
-    "wandb.login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "OKx_V_wnJCbb"
    },
    "outputs": [],
@@ -147,6 +129,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get Data from Wandb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 71
+    },
+    "executionInfo": {
+     "elapsed": 5572,
+     "status": "ok",
+     "timestamp": 1660707075761,
+     "user": {
+      "displayName": "Anish Shah",
+      "userId": "05913492621931233323"
+     },
+     "user_tz": 240
+    },
+    "id": "Hbg_JE1s0q6u",
+    "outputId": "48fec4f3-85e5-413a-911c-e4db3ad1aaa4"
+   },
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "wandb.login()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -169,6 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "run = wandb.init(\n",
     "    entity=wandb_entity,\n",
     "    project=project_name,\n",
@@ -198,6 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
@@ -330,12 +348,22 @@
     "id": "oz8fUbbTJCbh"
    },
    "source": [
-    "## Load the Train Data\n",
-    "\n",
     "Our data pipeline map a raw `.zarr` folder into a multi-processing instance ready for training by:\n",
     "- loading the `zarr` into a `ChunkedDataset` object. This object has a reference to the different arrays into the zarr (e.g. agents and traffic lights);\n",
     "- wrapping the `ChunkedDataset` into an `AgentDataset`, which inherits from torch `Dataset` class;\n",
     "- passing the `AgentDataset` into a torch `DataLoader`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "-EDp7WnqJCbh"
+   },
+   "source": [
+    "# Training\n",
+    "\n",
+    "note: if you're on MacOS and using `py_satellite` rasterizer, you may need to disable opencv multiprocessing by adding:\n",
+    "`cv2.setNumThreads(0)` before the following cell. This seems to only affect running in python notebook and it's caused by the `cv2.warpaffine` function"
    ]
   },
   {
@@ -369,16 +397,13 @@
    "outputs": [],
    "source": [
     "def train_prediction_model(tuner_cfg : Dict):\n",
-    "    # ==== INIT DATASET\n",
-    "    #TODO fix this data flow if it doesnt make sense\n",
-    "    \n",
-    "    \n",
     "    trial_name = session.get_trial_name()\n",
     "    trial_id = session.get_trial_id()\n",
     "    trial_readable_name = f\"{trial_name}_{trial_id}\"\n",
     "    \n",
     "    dm = LocalDataManager()\n",
     "    \n",
+    "    # ==== Configurations\n",
     "    shuffle = tuner_cfg[\"shuffle\"]\n",
     "    batch_size = int(tuner_cfg[\"batch_size\"])\n",
     "    num_workers = tuner_cfg[\"num_workers\"]\n",
@@ -387,6 +412,7 @@
     "    dataset_key = tuner_cfg[\"dataset_key\"]\n",
     "    cfg = tuner_cfg[\"cfg\"]\n",
     "    \n",
+    "    # ==== Loading Dataset\n",
     "    rasterizer = build_rasterizer(cfg, dm)\n",
     "\n",
     "    train_zarr = ChunkedDataset(dm.require(dataset_key)).open()\n",
@@ -396,26 +422,7 @@
     "    train_dataloader = DataLoader(train_dataset, shuffle=shuffle, batch_size=batch_size_per_worker, num_workers=num_workers)\n",
     "    train_dataloader = train.torch.prepare_data_loader(train_dataloader)\n",
     "    \n",
-    "#     # ===== GENERATE AND LOAD CHOPPED DATASET\n",
-    "#     num_frames_to_chop = 100\n",
-    "#     eval_cfg = cfg[\"val_data_loader\"]\n",
-    "#     eval_base_path = create_chopped_dataset(dm.require(eval_cfg[\"key\"]), cfg[\"raster_params\"][\"filter_agents_threshold\"], \n",
-    "#                                   num_frames_to_chop, cfg[\"model_params\"][\"future_num_frames\"], MIN_FUTURE_STEPS)\n",
-    "    \n",
-    "#     eval_zarr_path = str(Path(eval_base_path) / Path(dm.require(eval_cfg[\"key\"])).name)\n",
-    "#     eval_mask_path = str(Path(eval_base_path) / \"mask.npz\")\n",
-    "#     eval_gt_path = str(Path(eval_base_path) / \"gt.csv\")\n",
-    "\n",
-    "#     eval_zarr = ChunkedDataset(eval_zarr_path).open()\n",
-    "#     eval_mask = np.load(eval_mask_path)[\"arr_0\"]\n",
-    "#     # ===== INIT DATASET AND LOAD MASK\n",
-    "#     eval_dataset = AgentDataset(cfg, eval_zarr, rasterizer, agents_mask=eval_mask)\n",
-    "#     eval_dataloader = DataLoader(eval_dataset, shuffle=eval_cfg[\"shuffle\"], batch_size=eval_cfg[\"batch_size\"], \n",
-    "#                                  num_workers=eval_cfg[\"num_workers\"])\n",
-    "#     eval_dataloader = train.torch.prepare_data_loader(eval_dataloader)\n",
-    "    \n",
-    "    # ==== INIT MODEL\n",
-    "    # device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    # ==== Init model\n",
     "    model = build_model(cfg)\n",
     "    model = train.torch.prepare_model(model)\n",
     "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
@@ -423,31 +430,11 @@
     "\n",
     "    # ==== TRAIN LOOP\n",
     "    tr_it = iter(train_dataloader)\n",
-    "    # progress_bar = tqdm(range(cfg[\"train_params\"].get(\"max_num_steps\", 5)))\n",
     "    progress_bar = range(max_num_steps)\n",
     "    num_checkpoints = 5\n",
     "    steps_before_checkpointing = max_num_steps // num_checkpoints\n",
     "    losses_train = []\n",
     "    checkpoint_counter = 0\n",
-    "    \n",
-    "    # Run information\n",
-    "    # wandb_entity = \"l5-demo\"\n",
-    "    # project_name = \"l5-prediction\"\n",
-    "    # run_name = f\"evaluate-{trial_readable_name}\"\n",
-    "    # run_type = \"evaluate\"\n",
-    "    # run_description = \"\"\"\n",
-    "    # Download data for the task of training a prediction model\n",
-    "    # \"\"\"\n",
-    "    # tags = [\"train\", \"evaluate\", \"prediction\"]\n",
-    "\n",
-    "    # run = wandb.init(\n",
-    "    #     entity=wandb_entity,\n",
-    "    #     project=project_name,\n",
-    "    #     job_type=run_type,\n",
-    "    #     name=run_name,\n",
-    "    #     notes=run_description,\n",
-    "    #     tags=tags\n",
-    "    # )\n",
     "    \n",
     "    for step in progress_bar:\n",
     "        try:\n",
@@ -466,57 +453,34 @@
     "            \"avg_loss\": avg_loss\n",
     "        }\n",
     "        \n",
-    "        #NOTE: To prevent stdout bloat\n",
     "        if train.world_rank() == 0:\n",
     "            print(metrics)\n",
-    "        # progress_bar.set_description(f\"loss: {metrics[\"loss\"]} loss(avg): {metrics[\"loss(avg)\"]}\")\n",
     "        \n",
-    "        #TODO: move the evaluation logic for reporting during this run to the callback\n",
     "        if (step%steps_before_checkpointing==0) or (step==max_num_steps-1):\n",
-    "            # trial_checkpoint_name = f\"{trial_readable_name}_checkpoint_{checkpoint_counter}\"\n",
-    "            # dir_to_save = Path(save_directory, trial_checkpoint_name)\n",
-    "            # dir_to_save.mkdir(parents=True, exist_ok=True)\n",
-    "            # eval_metrics, eval_frame_prediction_details = evaluate_model(model, criterion, \n",
-    "            #                                                              eval_dataloader, \n",
-    "            #                                                              eval_gt_path, \n",
-    "            #                                                              eval_dataset, \n",
-    "            #                                                              eval_zarr, \n",
-    "            #                                                              rasterizer, \n",
-    "            #                                                              dir_to_save)\n",
-    "            # checkpoint_images = []\n",
-    "            # for val in eval_frame_prediction_details.values():\n",
-    "            #     checkpoint_images.append(wandb.Image(val[\"image_path\"]))\n",
-    "            # checkpoint_images = {f\"{trial_checkpoint_name}_images\" : checkpoint_images}\n",
-    "            # metrics.update(eval_metrics)\n",
-    "            # metrics.update(checkpoint_images)\n",
     "            session.report(\n",
     "                metrics=metrics,\n",
     "                checkpoint=Checkpoint.from_dict(dict(step=step, model=model)))\n",
-    "            #Bug: Need to call init to be able to alert\n",
-    "            # wandb.alert(\n",
-    "            #     title=f'{trial_readable_name}_checkpoint_{checkpoint_counter}_complete',\n",
-    "            #     text=f'Final loss was {loss} and final avg_loss was {avg_loss}'\n",
-    "            # )\n",
     "            checkpoint_counter += 1\n",
     "        else:\n",
     "            session.report(\n",
     "                metrics=metrics\n",
     "            )\n",
     "\n",
-    "    \n",
-    "    # run.finish()"
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-EDp7WnqJCbh"
-   },
+   "metadata": {},
    "source": [
-    "# Training\n",
-    "\n",
-    "note: if you're on MacOS and using `py_satellite` rasterizer, you may need to disable opencv multiprocessing by adding:\n",
-    "`cv2.setNumThreads(0)` before the following cell. This seems to only affect running in python notebook and it's caused by the `cv2.warpaffine` function"
+    "### Distributed Training using Ray"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We calculate the available hardware for our current training sessions and efficiently split CPUs based on GPUs or split CPUs evenly if possible"
    ]
   },
   {
@@ -529,7 +493,7 @@
    "source": [
     "from ray.train.torch import TorchTrainer\n",
     "from ray.air.config import RunConfig, ScalingConfig\n",
-    "from ray.air.callbacks.wandb import WandbLoggerCallback"
+    "from ray.air.callbacks.wandb import WandbLoggerCallback #🪄🐝"
    ]
   },
   {
@@ -558,7 +522,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num_data_workers = 16\n",
     "if USE_GPU:\n",
     "    num_actors = NUM_GPUS\n",
     "    num_data_workers = NUM_CPUS // num_actors\n",
@@ -566,6 +529,13 @@
     "    num_data_workers = 4 if NUM_CPUS>=4 else NUM_CPUS\n",
     "    ideal_num_actors = NUM_CPUS // num_data_workers\n",
     "    num_actors = ideal_num_actors if ideal_num_actors else 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To use Ray all we need to simply do is wrap the training function above. The only addition needed above was calls to `report.session` to log metrics during training"
    ]
   },
   {
@@ -593,8 +563,17 @@
     "#NOTE: To figure out if scaling config intuiutin is correct: num_actors divide resources between each actor and within the train func each actor can the utilize the shared resources\n",
     "trainer = TorchTrainer(\n",
     "    train_loop_per_worker=train_prediction_model,\n",
-    "    scaling_config=ScalingConfig(num_workers=num_actors, use_gpu=USE_GPU), #TODO: Add logic to check if GPU is available here\n",
+    "    scaling_config=ScalingConfig(num_workers=num_actors, use_gpu=USE_GPU),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distributed Hyperparemeter Tuning using Ray\n",
+    "\n",
+    "Due to Ray's easy interface we can simply extend our normal trainer to Ray's tuner which will allow us to do efficient hyperparameter optimization. In our case we use `optuna`"
    ]
   },
   {
@@ -606,15 +585,11 @@
     "tuner_train_config = {}\n",
     "##static\n",
     "tuner_train_config[\"shuffle\"] = cfg[\"train_data_loader\"][\"shuffle\"]\n",
-    "#TODO: what is this useful for?\n",
-    "# tuner_train_config[\"num_workers\"] = cfg[\"train_data_loader\"][\"num_workers\"]\n",
     "tuner_train_config[\"num_workers\"] = num_data_workers\n",
     "tuner_train_config[\"dataset_key\"] = cfg[\"train_data_loader\"][\"key\"]\n",
-    "# tuner_train_config[\"batch_size\"] = 12\n",
     "\n",
     "##tunable\n",
     "tuner_train_config[\"max_num_steps\"] = tune.quniform(1000, 5000, 250)\n",
-    "# tuner_train_config[\"max_num_steps\"] = tune.quniform(5, 50, 5)\n",
     "tuner_train_config[\"lr\"] = tune.loguniform(1e-4, 1e-2)\n",
     "tuner_train_config[\"batch_size\"] = tune.quniform(6, 24, 6)\n",
     "cfg[\"raster_params\"][\"map_type\"] = tune.choice([\"py_semantic\", \"py_satellite\"])\n",
@@ -630,33 +605,6 @@
    "source": [
     "from ray.tune.logger import LoggerCallback\n",
     "from typing import Dict, List"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ## For now passing the current run context to this callback to better organize the models logged\n",
-    "# class TrialEndModelSaveCallback(LoggerCallback):\n",
-    "    \n",
-    "#     def __init__(self, run, save_directory):\n",
-    "#         self.run = run\n",
-    "#         self.save_directory = save_directory\n",
-    "    \n",
-    "#     def on_trial_complete(self, iteration: int, trials: List[\"Trial\"],\n",
-    "#                           trial: \"Trial\", **info):\n",
-    "#         print(\"here\")\n",
-    "#         trial_name = trial._trainable_name(include_trial_id=True)\n",
-    "#         print(trial_name)\n",
-    "#         final_model_checkpoint = trial.checkpoint.to_air_checkpoint().to_dict()\n",
-    "#         print(final_model_checkpoint)\n",
-    "#         model = final_model_checkpoint[\"model\"]\n",
-    "#         print(model)\n",
-    "#         final_model = torch.jit.script(model.cpu())\n",
-    "#         path_to_save = f\"{trial_name}-trained_model\"\n",
-    "#         final_model.save(path_to_save)"
    ]
   },
   {
@@ -706,11 +654,14 @@
     "        },\n",
     "        run_config=RunConfig(\n",
     "            stop=ExperimentPlateauStopper(\"avg_loss\"),\n",
-    "            callbacks=[WandbLoggerCallback(project=f\"{project_name}-trials\", save_checkpoints=True), \n",
-    "                                        # TrialEndModelSaveCallback(run, save_directory)\n",
-    "                                       ]\n",
-    "                            )\n",
-    "    )"
+    "            callbacks=[WandbLoggerCallback(project=f\"{project_name}-trials\", save_checkpoints=True),]))  #🪄🐝"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregrate and Report Metrics from All Trials"
    ]
   },
   {
@@ -754,7 +705,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#does sleeping help???\n",
     "time.sleep(30)"
    ]
   },
@@ -782,16 +732,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# analysis.get_best_result().metrics\n",
-    "# best_result = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Run information\n",
     "wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-prediction\"\n",
@@ -809,6 +749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "run = wandb.init(\n",
     "    entity=wandb_entity,\n",
     "    project=project_name,\n",
@@ -827,6 +768,7 @@
    "outputs": [],
    "source": [
     "#BUG: to force a connection on the lineage graph\n",
+    "#🪄🐝\n",
     "artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
@@ -836,6 +778,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#🪄🐝\n",
     "analysis_table = wandb.Table(dataframe=analysis_df)"
    ]
   },
@@ -852,13 +795,6 @@
     "    run.log({\"analysis_table\": analysis_table})\n",
     "    run.finish()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
