Remove references to wandb_entity, remove embedded pip installs, pin pandas req

--- a/Notebooks/step-1-data/s2-visualise-l5-data.ipynb
+++ b/Notebooks/step-1-data/s2-visualise-l5-data.ipynb
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "wandb_entity = \"l5-demo\"\n",
+    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-common\"\n",
     "run_name = \"visualize_data\"\n",
     "run_type = \"visualize\"\n",
@@ -250,7 +250,7 @@
    "source": [
     "#🪄🐝\n",
     "run = wandb.init(\n",
-    "    entity=wandb_entity,\n",
+    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -267,7 +267,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact_entity = \"l5-demo\"\n",
+    "# artifact_entity = \"l5-demo\"\n",
     "artifact_project = \"l5-common\"\n",
     "artifact_name = \"l5-data\"\n",
     "artifact_alias = \"latest\"\n",
@@ -286,7 +286,8 @@
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
+    "# artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)\n",
+    "artifact = run.use_artifact(f\"{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
   {
@@ -1285,9 +1286,9 @@
   },
   "environment": {
    "kernel": "python3",
-   "name": "common-cu110.m95",
+   "name": "common-cu110.m103",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cu110:m95"
+   "uri": "gcr.io/deeplearning-platform-release/base-cu110:m103"
   },
   "kernelspec": {
    "display_name": "Python 3",
