--- a/Notebooks/step-2-exp-1-motion-prediction/s3-train-agent_motion_prediction.ipynb
+++ b/Notebooks/step-2-exp-1-motion-prediction/s3-train-agent_motion_prediction.ipynb
@@ -83,20 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "# !pip install -r requirements.txt\n",
-    "!pip install l5kit pyyaml wandb\n",
-    "!pip install ray==2.0.0rc1\n",
-    "!pip install \"ray[air]\"\n",
-    "!pip install optuna"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "id": "OKx_V_wnJCbb"
    },
@@ -169,7 +155,7 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "wandb_entity = \"l5-demo\"\n",
+    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-prediction\"\n",
     "run_name = \"download-l5-data\"\n",
     "run_type = \"download\"\n",
@@ -187,7 +173,7 @@
    "source": [
     "#🪄🐝\n",
     "run = wandb.init(\n",
-    "    entity=wandb_entity,\n",
+    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -202,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact_entity = \"l5-demo\"\n",
+    "# artifact_entity = \"l5-demo\"\n",
     "artifact_project = \"l5-common\"\n",
     "artifact_name = \"l5-data\"\n",
     "artifact_alias = \"latest\"\n",
@@ -211,19 +197,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
+    "# artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)\n",
+    "artifact = run.use_artifact(f\"{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Downloading large artifact l5-data:latest, 2386.92MB. 517 files... \n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m:   517 of 517 files downloaded.  \n",
+      "Done. 0:0:0.2\n"
+     ]
+    }
+   ],
    "source": [
     "_ = artifact.download(data_directory)"
    ]
@@ -733,7 +730,7 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "wandb_entity = \"l5-demo\"\n",
+    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-prediction\"\n",
     "run_name = \"train-prediction-model\"\n",
     "run_type = \"train\"\n",
@@ -751,7 +748,7 @@
    "source": [
     "#🪄🐝\n",
     "run = wandb.init(\n",
-    "    entity=wandb_entity,\n",
+    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -769,7 +766,8 @@
    "source": [
     "#BUG: to force a connection on the lineage graph\n",
     "#🪄🐝\n",
-    "artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
+    "# artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)\n",
+    "artifact = run.use_artifact(f\"{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
   {
@@ -811,9 +809,9 @@
   },
   "environment": {
    "kernel": "python3",
-   "name": "common-cu110.m95",
+   "name": "common-cu110.m103",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cu110:m95"
+   "uri": "gcr.io/deeplearning-platform-release/base-cu110:m103"
   },
   "gpuClass": "standard",
   "kernelspec": {
