--- a/Notebooks/step-2-exp-1-motion-prediction/s4-eval_agent_motion_prediction.ipynb
+++ b/Notebooks/step-2-exp-1-motion-prediction/s4-eval_agent_motion_prediction.ipynb
@@ -75,21 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "315d6ea2-bfb4-410b-803f-cb9d78d48e84",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "# !pip install -r requirements.txt\n",
-    "!pip install l5kit pyyaml wandb\n",
-    "!pip install ray==2.0.0rc1\n",
-    "!pip install \"ray[air]\"\n",
-    "!pip install h5py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b4e40dce-0b6b-4527-aed6-a389ed7b09fd",
    "metadata": {},
    "outputs": [],
@@ -147,7 +132,7 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "wandb_entity = \"l5-demo\"\n",
+    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-prediction\"\n",
     "run_name = \"evaluate-latest-models\"\n",
     "run_type = \"evaluate\"\n",
@@ -166,7 +151,7 @@
    "source": [
     " #🪄🐝\n",
     "run = wandb.init(\n",
-    "    entity=wandb_entity,\n",
+    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -182,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact_entity = \"l5-demo\"\n",
+    "# artifact_entity = \"l5-demo\"\n",
     "artifact_project = \"l5-common\"\n",
     "artifact_name = \"l5-data\"\n",
     "artifact_alias = \"latest\"\n",
@@ -197,7 +182,8 @@
    "outputs": [],
    "source": [
     " #🪄🐝\n",
-    "artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
+    "# artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)\n",
+    "artifact = run.use_artifact(f\"{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
   {
@@ -543,7 +529,8 @@
     "api = wandb.Api()\n",
     "\n",
     "#Example: Grab all run trials from a specific date range?\n",
-    "model_runs = api.runs(f'{wandb_entity}/{project_name}-trials', {\n",
+    "# model_runs = api.runs(f'{wandb_entity}/{project_name}-trials', {\n",
+    "model_runs = api.runs(f'{project_name}-trials', {\n",
     "    # \"$and\": [{\n",
     "    # 'created_at': {\n",
     "    #     \"$lt\": 'YYYY-MM-DDT##',\n",
@@ -735,9 +722,9 @@
  "metadata": {
   "environment": {
    "kernel": "python3",
-   "name": "common-cu110.m95",
+   "name": "common-cu110.m103",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cu110:m95"
+   "uri": "gcr.io/deeplearning-platform-release/base-cu110:m103"
   },
   "kernelspec": {
    "display_name": "Python 3",
