--- a/Notebooks/step-2-exp-1-motion-prediction/s5-promote-agent_motion_prediction.ipynb
+++ b/Notebooks/step-2-exp-1-motion-prediction/s5-promote-agent_motion_prediction.ipynb
@@ -66,18 +66,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21e699e8-cae6-41bb-92c9-2f639247f6d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "# !pip install -r requirements.txt\n",
-    "!pip install wandb --upgrade"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1438cb2a-8349-474c-98df-cce0100b3449",
    "metadata": {},
@@ -104,7 +92,7 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "wandb_entity = \"l5-demo\"\n",
+    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-planning\""
    ]
   },
@@ -137,7 +125,8 @@
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "model_runs = api.runs(f'{wandb_entity}/{project_name}-trials', order=f\"summary_metrics.{eval_metric}\", per_page=1)"
+    "# model_runs = api.runs(f'{wandb_entity}/{project_name}-trials', order=f\"summary_metrics.{eval_metric}\", per_page=1)\n",
+    "model_runs = api.runs(f'{project_name}-trials', order=f\"summary_metrics.{eval_metric}\", per_page=1)"
    ]
   },
   {
@@ -181,16 +170,17 @@
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "top_model_art.link(f\"{wandb_entity}/{project_name}/{collection_name}\")"
+    "# top_model_art.link(f\"{wandb_entity}/{project_name}/{collection_name}\")\n",
+    "top_model_art.link(f\"{project_name}/{collection_name}\")"
    ]
   }
  ],
  "metadata": {
   "environment": {
    "kernel": "python3",
-   "name": "common-cu110.m95",
+   "name": "common-cu110.m103",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/base-cu110:m95"
+   "uri": "gcr.io/deeplearning-platform-release/base-cu110:m103"
   },
   "kernelspec": {
    "display_name": "Python 3",
