--- a/Notebooks/step-1-data/s1-upload-l5kit-sample-data-wandb.ipynb
+++ b/Notebooks/step-1-data/s1-upload-l5kit-sample-data-wandb.ipynb
@@ -214,7 +214,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -240,7 +239,7 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "wandb_entity = \"l5-demo\"\n",
+    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-common\"\n",
     "run_name = \"upload_data\"\n",
     "run_type = \"data_upload\"\n",
@@ -673,12 +672,13 @@
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "run = wandb.init(entity=wandb_entity,\n",
-    "                 project=project_name,\n",
-    "                 job_type=run_type,\n",
-    "                 name=run_name,\n",
-    "                 tags=tags,\n",
-    "                 notes=run_description)"
+    "run = wandb.init(\n",
+    "    # entity=wandb_entity,\n",
+    "    project=project_name,\n",
+    "    job_type=run_type,\n",
+    "    name=run_name,\n",
+    "    tags=tags,\n",
+    "    notes=run_description)"
    ]
   },
   {
