add missing device call to model to prevent gpu/cpu mismatch

--- a/Notebooks/step-2-exp-1-motion-prediction/s4-eval_agent_motion_prediction.ipynb
+++ b/Notebooks/step-2-exp-1-motion-prediction/s4-eval_agent_motion_prediction.ipynb
@@ -405,12 +405,15 @@
    "outputs": [],
    "source": [
     "def evaluate_model(model, criterion, eval_dataloader, eval_gt_path, eval_dataset, eval_zarr, rasterizer, dir_to_save=\".\"):\n",
+    "    #TODO: see if there is a better ray way\n",
+    "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    \n",
     "    # ==== EVAL LOOP\n",
+    "    model = model.to(device)\n",
     "    model.eval()\n",
     "    torch.set_grad_enabled(False)\n",
     "    \n",
-    "    #TODO: see if there is a better ray way\n",
-    "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    \n",
     "\n",
     "    # store information for evaluation\n",
     "    future_coords_offsets_pd = []\n",
