have model registry link from proper project

--- a/Notebooks/step-2-exp-1-motion-prediction/s5-promote-agent_motion_prediction.ipynb
+++ b/Notebooks/step-2-exp-1-motion-prediction/s5-promote-agent_motion_prediction.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "# Run information\n",
     "# wandb_entity = \"l5-demo\"\n",
-    "project_name = \"l5-planning\""
+    "project_name = \"l5-prediction\""
    ]
   },
   {
