fix ray version and notebook structure

--- a/Notebooks/Lab/step-1-data/s2-visualise-l5-data.ipynb
+++ b/Notebooks/Lab/step-1-data/s2-visualise-l5-data.ipynb
@@ -179,7 +179,6 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-common\"\n",
     "run_name = \"visualize_data\"\n",
     "run_type = \"visualize\"\n",
@@ -227,7 +226,6 @@
    "source": [
     "#🪄🐝\n",
     "run = wandb.init(\n",
-    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -244,7 +242,6 @@
    },
    "outputs": [],
    "source": [
-    "# artifact_entity = \"l5-demo\"\n",
     "artifact_project = \"l5-common\"\n",
     "artifact_name = \"l5-data\"\n",
     "artifact_alias = \"latest\"\n",
@@ -263,7 +260,6 @@
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "# artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)\n",
     "artifact = run.use_artifact(f\"{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
@@ -1206,20 +1202,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# zarr_dataset_details_table #move this to metadata of artifact during the initial logging step?\n",
-    "# coord_table\n",
-    "# label_table\n",
-    "# sampled_frames_table\n",
-    "# sampled_agents_table\n",
-    "# sampled_animations_table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#🪄🐝\n",
     "analysis_artifact = wandb.Artifact(name=artifact_name, type=artifact_type, description=artifact_description)\n",
     "analysis_artifact.add(zarr_dataset_details_table, \"zarr_dataset_details_table\")\n",
@@ -1227,8 +1209,7 @@
     "analysis_artifact.add(label_table, \"label_table\")\n",
     "analysis_artifact.add(sampled_frames_table, \"sampled_frames_table\")\n",
     "analysis_artifact.add(sampled_agents_table, \"sampled_agents_table\")\n",
-    "analysis_artifact.add(sampled_animations_table, \"sampled_animations_table\")\n",
-    "#TODO: Add raw outputs to artifact? or redundant"
+    "analysis_artifact.add(sampled_animations_table, \"sampled_animations_table\")"
    ]
   },
   {
@@ -1268,7 +1249,7 @@
    "uri": "gcr.io/deeplearning-platform-release/base-cu110:m103"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1282,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.10"
   },
   "pycharm": {
    "stem_cell": {
