--- a/Notebooks/Lab/s0-log-code-in-this-folder-to-wandb.ipynb
+++ b/Notebooks/Lab/s0-log-code-in-this-folder-to-wandb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1a16f54a-5e5c-4fb4-903f-ceee395b042d",
+   "id": "1d7f2dc8",
    "metadata": {},
    "source": [
     "# Setup"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9829e183-da3a-4ff9-9960-f77eccd8d50d",
+   "id": "b1941595",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +22,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e381b1b-4f6c-41e2-81aa-4ac708900d90",
+   "id": "8ca48bd7",
    "metadata": {},
    "outputs": [],
    "source": [
     "#NOTE: DONT USE RELATIVE PATHS FOR THE MODELS PROVIDED BY L5\n",
     "code_directory = Path(os.path.abspath(''))\n",
-    "experiments_directory = Path(code_directory.parent.parent.parent, \"Experiments\")\n",
+    "experiments_directory = Path(code_directory.parent.parent.parent.parent, \"Experiments\")\n",
     "experiments_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "data_directory = Path(experiments_directory, \"data\")\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b2af65e-9c2f-4aea-a925-3423ad8fa2ec",
+   "id": "23fba2b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "082468e9-b268-497d-8054-1a695480dcb8",
+   "id": "11a6658f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,29 +61,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "970b4c5d-1d3b-408c-be91-833619fdd1a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "# !pip install -r requirements.txt\n",
-    "!pip install wandb"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "eab014f9-0604-4d86-a047-6e777e840676",
+   "id": "cd23bae8",
    "metadata": {},
    "source": [
-    "# Promote Model to Registry"
+    "# Log Code in this directory to WANDB"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5403b7c-35fa-4d2b-b846-232844501fcd",
+   "id": "dfe62483",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84ffebe4-0af2-4699-8ebd-1d6884bc046c",
+   "id": "c9b4cf2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run information\n",
-    "wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-common\"\n",
     "run_name = \"upload_code\"\n",
     "run_type = \"code_upload\"\n",
@@ -112,13 +99,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db02ecff-0162-4c7b-ac45-465327d6d0d7",
+   "id": "f4b2a21a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "run = wandb.init(entity=wandb_entity,\n",
-    "                 project=project_name,\n",
+    "run = wandb.init(project=project_name,\n",
     "                 job_type=run_type,\n",
     "                 name=run_name,\n",
     "                 tags=tags,\n",
@@ -128,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84afd93c-2428-4d91-83d9-2d8335151f51",
+   "id": "c3659180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05272e87-2066-4678-9c50-92c3a8484dda",
+   "id": "6bbe2d44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +143,7 @@
    "uri": "gcr.io/deeplearning-platform-release/base-cu110:m95"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
