--- a/Notebooks/Lab/step-1-data/s1-upload-l5kit-sample-data-wandb.ipynb
+++ b/Notebooks/Lab/step-1-data/s1-upload-l5kit-sample-data-wandb.ipynb
@@ -49,6 +49,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "experiments_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "os.chdir(save_directory)"
    ]
@@ -239,7 +248,6 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-common\"\n",
     "run_name = \"upload_data\"\n",
     "run_type = \"data_upload\"\n",
@@ -673,7 +681,6 @@
    "source": [
     "#🪄🐝\n",
     "run = wandb.init(\n",
-    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -739,6 +746,13 @@
    "source": [
     "run.finish()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -756,7 +770,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -770,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
