--- a/Notebooks/Lab/step-2-exp-1-motion-prediction/s3-train-agent_motion_prediction.ipynb
+++ b/Notebooks/Lab/step-2-exp-1-motion-prediction/s3-train-agent_motion_prediction.ipynb
@@ -74,7 +74,7 @@
     "%%writefile requirements.txt\n",
     "l5kit\n",
     "pyyaml\n",
-    "ray==2.0.0rc1\n",
+    "ray==2.1.0\n",
     "ray[air]\n",
     "wandb\n",
     "optuna"
@@ -155,7 +155,6 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-prediction\"\n",
     "run_name = \"download-l5-data\"\n",
     "run_type = \"download\"\n",
@@ -173,7 +172,6 @@
    "source": [
     "#🪄🐝\n",
     "run = wandb.init(\n",
-    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -188,7 +186,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# artifact_entity = \"l5-demo\"\n",
     "artifact_project = \"l5-common\"\n",
     "artifact_name = \"l5-data\"\n",
     "artifact_alias = \"latest\"\n",
@@ -197,30 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "# artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)\n",
     "artifact = run.use_artifact(f\"{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Downloading large artifact l5-data:latest, 2386.92MB. 517 files... \n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m:   517 of 517 files downloaded.  \n",
-      "Done. 0:0:0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "_ = artifact.download(data_directory)"
    ]
@@ -557,7 +543,6 @@
    },
    "outputs": [],
    "source": [
-    "#NOTE: To figure out if scaling config intuiutin is correct: num_actors divide resources between each actor and within the train func each actor can the utilize the shared resources\n",
     "trainer = TorchTrainer(\n",
     "    train_loop_per_worker=train_prediction_model,\n",
     "    scaling_config=ScalingConfig(num_workers=num_actors, use_gpu=USE_GPU),\n",
@@ -586,7 +571,7 @@
     "tuner_train_config[\"dataset_key\"] = cfg[\"train_data_loader\"][\"key\"]\n",
     "\n",
     "##tunable\n",
-    "tuner_train_config[\"max_num_steps\"] = tune.quniform(1000, 5000, 250)\n",
+    "tuner_train_config[\"max_num_steps\"] = tune.quniform(100, 500, 25)\n",
     "tuner_train_config[\"lr\"] = tune.loguniform(1e-4, 1e-2)\n",
     "tuner_train_config[\"batch_size\"] = tune.quniform(6, 24, 6)\n",
     "cfg[\"raster_params\"][\"map_type\"] = tune.choice([\"py_semantic\", \"py_satellite\"])\n",
@@ -730,7 +715,6 @@
    "outputs": [],
    "source": [
     "# Run information\n",
-    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-prediction\"\n",
     "run_name = \"train-prediction-model\"\n",
     "run_type = \"train\"\n",
@@ -748,7 +732,6 @@
    "source": [
     "#🪄🐝\n",
     "run = wandb.init(\n",
-    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -764,9 +747,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#BUG: to force a connection on the lineage graph\n",
     "#🪄🐝\n",
-    "# artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)\n",
     "artifact = run.use_artifact(f\"{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
@@ -786,7 +767,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#BUG: run gets lost after tune job due to change in cwd. Forced to make 2 runs\n",
     "if len(analysis_table.data) == 0:\n",
     "    raise ValueError(\"bad table for some reason\")\n",
     "else:\n",
@@ -815,7 +795,7 @@
   },
   "gpuClass": "standard",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -829,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.10"
   },
   "pycharm": {
    "stem_cell": {
