--- a/Notebooks/Lab/step-2-exp-1-motion-prediction/s4-eval_agent_motion_prediction.ipynb
+++ b/Notebooks/Lab/step-2-exp-1-motion-prediction/s4-eval_agent_motion_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "78f8576c-7a2a-48da-95e5-cdfdb2fd509b",
+   "id": "63d6eb40",
    "metadata": {
     "tags": []
    },
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26946d7b-0af8-4881-b9e6-ce321dde61d2",
+   "id": "2e3106da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60984eca-8928-491a-a7f0-f64ccd5dfae8",
+   "id": "efc8aebc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e78b3c4-07a5-40d7-b855-26dddf9b9f0c",
+   "id": "4dec7011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8976762-3564-4919-a004-d345359db169",
+   "id": "798167be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
     "l5kit\n",
     "pyyaml\n",
     "wandb\n",
-    "ray==2.0.0rc1\n",
+    "ray==2.1.0\n",
     "\"ray[air]\"\n",
     "h5py"
    ]
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4e40dce-0b6b-4527-aed6-a389ed7b09fd",
+   "id": "d3e78ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb2f96b-d615-4b06-bad4-38ecb694ddfb",
+   "id": "57d8dfa1",
    "metadata": {},
    "source": [
     "# Pull data"
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ea836c4-1cd2-4677-9cf1-c68d4825ec78",
+   "id": "6f55d643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,12 +127,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07edc0a9-a02a-475b-a699-08e41a100eff",
+   "id": "78e08ab7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run information\n",
-    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-prediction\"\n",
     "run_name = \"evaluate-latest-models\"\n",
     "run_type = \"evaluate\"\n",
@@ -145,13 +144,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d9dddc4-939f-49ce-8c9b-f708c3cc7d78",
+   "id": "e9969d62",
    "metadata": {},
    "outputs": [],
    "source": [
     " #🪄🐝\n",
     "run = wandb.init(\n",
-    "    # entity=wandb_entity,\n",
     "    project=project_name,\n",
     "    job_type=run_type,\n",
     "    name=run_name,\n",
@@ -163,11 +161,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a29a2e4f-e821-43cc-94a0-5ee51cbcba29",
+   "id": "81bc6a43",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# artifact_entity = \"l5-demo\"\n",
     "artifact_project = \"l5-common\"\n",
     "artifact_name = \"l5-data\"\n",
     "artifact_alias = \"latest\"\n",
@@ -177,19 +174,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caf5b64c-b3a0-4ef0-8f92-f0675319cc71",
+   "id": "0edcccaa",
    "metadata": {},
    "outputs": [],
    "source": [
     " #🪄🐝\n",
-    "# artifact = run.use_artifact(f\"{artifact_entity}/{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)\n",
     "artifact = run.use_artifact(f\"{artifact_project}/{artifact_name}:{artifact_alias}\", type=artifact_type)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1b343c2-8d4b-459b-895d-451eac6a9744",
+   "id": "08c1beb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd206d44-416c-4db3-97ee-2144f636a0a5",
+   "id": "1c18f673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "942bfd64-3ff6-4a2b-8574-c70c1cf0cc19",
+   "id": "e43635bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ade7f0f-e055-4221-b90e-384a6809f2f6",
+   "id": "35460317",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1091ca97-41da-4126-8aa0-6d5006bf5417",
+   "id": "83375694",
    "metadata": {
     "id": "maau9CVBJCbi"
    },
@@ -246,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93e0fdd5-c898-4d72-8f99-176d69fd919e",
+   "id": "63e722cb",
    "metadata": {
     "id": "fF8BxQLQJCbi"
    },
@@ -261,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21dd27df-0c6c-49b8-98bb-8e8bfba9176d",
+   "id": "260e40c8",
    "metadata": {
     "id": "07W1O8eZJCbi"
    },
@@ -281,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f984be7c-34c0-424a-b828-12ce08f46ded",
+   "id": "7a5cf703",
    "metadata": {
     "id": "cU1qt5GVJCbj"
    },
@@ -298,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da89f4fb-bb3b-4608-b286-d6c712b0485b",
+   "id": "26005934",
    "metadata": {
     "id": "509YuZenJCbj"
    },
@@ -310,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe160fa-918e-4da0-9b45-0bf04b89443f",
+   "id": "134a7215",
    "metadata": {
     "id": "1cyqL6i1JCbj"
    },
@@ -324,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "691ae693-5b0f-4fe9-92d0-01a571bf749e",
+   "id": "e470dcbf",
    "metadata": {
     "id": "YX-loQElJCbj"
    },
@@ -337,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f263a9d-4098-4cee-a3da-d4589c19e165",
+   "id": "f11ae855",
    "metadata": {
     "id": "nEw-PI7tJCbk"
    },
@@ -350,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "379ae8ab-6522-47a2-b349-a397cc5b900c",
+   "id": "6fbcb9c2",
    "metadata": {},
    "source": [
     "# Run Evaluation"
@@ -359,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0346dff1-a428-4513-80b8-a3f46a9de566",
+   "id": "468720ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae91b622-4a8a-40f5-9771-48441766042a",
+   "id": "5cb425b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c974eefa-542e-4bdd-8d0d-9e17194f2693",
+   "id": "03aa95d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88875128-0ba0-4b8c-9d5f-c2f969c02366",
+   "id": "27928a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3d38de8-2ed0-42cc-bb43-415e553c52a3",
+   "id": "ddf82d77",
    "metadata": {},
    "source": [
     "We use the `wandb` Public API to easily grab all the runs from our training project (with any optional filters) and use them as candidate models for the evaluation flow."
@@ -524,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b29c46f8-5696-4c62-b732-ce38a39d4c27",
+   "id": "d16d8715",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b99443d-2566-4023-a940-bd63f58f2131",
+   "id": "d8c266b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e666c25-ace1-4819-8a67-a8ebf8c1ce9c",
+   "id": "2ba14ad3",
    "metadata": {},
    "source": [
     "Note: during our evaluation flow we are not creating a new run per each evaluation. Instead, to be able to keep the context of the training of the model with the evaluation, we simply update the summary metadata of the candidate model runs with the additional evaluation metrics, keeping things unified and streamlined"
@@ -578,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfd1e854-f401-4061-97a1-faabda5f72be",
+   "id": "a7c3c763",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e18802d0-762e-47c7-8317-36b9c6b780ef",
+   "id": "d74ace2a",
    "metadata": {},
    "source": [
     "### Log Table containing all details of Eval run"
@@ -672,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30bfe658-b5a9-46ad-aa48-b08c2538d4aa",
+   "id": "7fa5fe85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d022dd33-9e64-432f-b9ee-602c03a59705",
+   "id": "45365045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bacb17e-c249-4cac-b424-1e1f13424310",
+   "id": "d9cb0b66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19507ed8-0a1d-4074-aee8-c66b63e1e2a5",
+   "id": "6573ca4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b89338-d673-4cda-9b99-d633e81b13d9",
+   "id": "4028556d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +726,7 @@
    "uri": "gcr.io/deeplearning-platform-release/base-cu110:m103"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -744,7 +740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
