--- a/Notebooks/Lab/step-2-exp-1-motion-prediction/s5-promote-agent_motion_prediction.ipynb
+++ b/Notebooks/Lab/step-2-exp-1-motion-prediction/s5-promote-agent_motion_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fce2c483-fb28-4761-9d39-78d331fc4ddf",
+   "id": "78a06af9",
    "metadata": {},
    "source": [
     "# Setup"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a15ecdb-1eab-4f5f-b9ae-bba87dcef51a",
+   "id": "d1ab3c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e381b1b-4f6c-41e2-81aa-4ac708900d90",
+   "id": "3495bce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4621404-95c0-417d-8847-c1de6c76c6e6",
+   "id": "6c306557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c82b9d59-29f6-4e52-9601-b071e9b05bc8",
+   "id": "3a75ab3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1438cb2a-8349-474c-98df-cce0100b3449",
+   "id": "4a4b61f8",
    "metadata": {},
    "source": [
     "# Promote Model to Registry"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d882ed2-40a0-44aa-a06c-8a0cc10f08fc",
+   "id": "7d0e493f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,19 +87,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2494e717-2efa-4843-89d3-9dc1c399e0bd",
+   "id": "e5759b36",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run information\n",
-    "# wandb_entity = \"l5-demo\"\n",
     "project_name = \"l5-prediction\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5313340a-66e4-4237-9969-5c3ec9570026",
+   "id": "405c718c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f0eb8a5-fc21-4eac-b4ed-325f506f8a07",
+   "id": "540e47b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,19 +119,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13fa4a0a-3a04-4d4c-a8a7-c253514669d1",
+   "id": "4cb791ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "# model_runs = api.runs(f'{wandb_entity}/{project_name}-trials', order=f\"summary_metrics.{eval_metric}\", per_page=1)\n",
     "model_runs = api.runs(f'{project_name}-trials', order=f\"summary_metrics.{eval_metric}\", per_page=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cb3545d-e436-4121-84a4-d631d0a3bc1d",
+   "id": "44e73120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44cba7d2-5f73-4d2b-891a-a86e8f36d230",
+   "id": "50efa5ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "798d660d-0a99-4004-a7d2-898e186145cf",
+   "id": "861af2a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,12 +163,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed59fe8a-33f7-4b1c-99bf-74769d220a58",
+   "id": "80325e99",
    "metadata": {},
    "outputs": [],
    "source": [
     "#🪄🐝\n",
-    "# top_model_art.link(f\"{wandb_entity}/{project_name}/{collection_name}\")\n",
     "top_model_art.link(f\"{project_name}/{collection_name}\")"
    ]
   }
@@ -183,7 +180,7 @@
    "uri": "gcr.io/deeplearning-platform-release/base-cu110:m103"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
